<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Grupos">


    <GridLayout
        android:id="@+id/toggle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/togglebackground"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@color/naranjaPrimario"
            android:text="@string/personal"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="68dp" />

        <Space android:layout_gravity="fill" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="3dp"
            android:enabled="false"
            android:text="@string/grupos"
            android:textColor="@color/blancoPrimario"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="69dp" />

    </GridLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle"
        app:layout_constraintVertical_bias="0.292">


        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutName"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/nombre"
                    android:textColor="@color/blancoPrimario"
                    app:layout_column="0"
                    app:layout_row="0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="190dp"
                        android:layout_height="match_parent"
                        android:hint="@string/nombre_hint" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutMoney"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/editTextText3"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/importe"
                    android:textColor="@color/blancoPrimario"
                    app:layout_column="0"
                    app:layout_row="0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="190dp"
                        android:layout_height="match_parent"
                        android:hint="@string/importe_hint" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/fecha"
                    android:textColor="@color/blancoPrimario"
                    app:layout_column="0"
                    app:layout_row="0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="190dp"
                        android:layout_height="match_parent"
                        android:hint="@string/fecha_hint" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutMembersDebt"
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/deudores"
                    android:textColor="@color/blancoPrimario"
                    app:layout_gravity="center" />

                <ScrollView
                    android:id="@+id/scrollViewDeudores"
                    android:layout_width="185dp"
                    android:layout_height="115dp"
                    android:background="@color/naranjaPrimario"
                    app:layout_gravity="center">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/scroll_view_deudores"
                        android:textColor="@color/blancoPrimario" />
                </ScrollView>

            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutCategory"
                android:layout_width="match_parent"
                android:layout_height="82dp">

                <EditText
                    android:id="@+id/editTextText5"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/categoria"
                    android:textColor="@color/blancoPrimario" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="57dp"
                    app:cardBackgroundColor="@color/naranjaPrimario"
                    app:cardCornerRadius="20dp"
                    app:layout_column="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="center"
                    app:layout_row="0"
                    app:layout_rowWeight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageViewOcio"
                            android:layout_width="34dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:src="@tools:sample/avatars"
                            android:tint="@color/blancoPrimario"
                            app:srcCompat="@drawable/ocio" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/ocio"
                            android:textColor="@color/blancoPrimario" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutScan"
                android:layout_width="match_parent"
                android:layout_height="82dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="66dp"
                    android:layout_height="67dp"
                    android:backgroundTint="@color/naranjaPrimario"
                    app:cardCornerRadius="20dp"
                    app:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@tools:sample/avatars"
                            app:srcCompat="@android:drawable/ic_menu_camera" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.gridlayout.widget.GridLayout>

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/naranjaPrimario"
                android:contentDescription="@string/anadir_nuevo_grupo"
                android:src="@drawable/add"
                app:tint="@color/blancoPrimario" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>