<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/category"/>
                <include layout="@layout/category"/>

                <include layout="@layout/category"/>

                <include layout="@layout/category"/>

                <include layout="@layout/category"/>
                <include layout="@layout/category"/>

                <include layout="@layout/category"/>




            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="413dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="300dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/grafico_semanal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <GridLayout
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/togglebackground"
            android:columnCount="5"
            android:paddingHorizontal="5dp"
            android:rowCount="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/semana"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:backgroundTint="@color/naranjaPrimario"
                android:text="@string/semana"
                android:textSize="13sp"
                android:textColor="@color/blancoPrimario"/>


            <Button
                android:id="@+id/mes"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/mes"
                android:backgroundTint="@color/naranjaOscuro"
                android:textColor="@color/blancoPrimario"
                android:textSize="13sp" />

            <Button
                android:id="@+id/mes3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/mes3"
                android:backgroundTint="@color/naranjaOscuro"
                android:textColor="@color/blancoPrimario"
                android:textSize="13sp" />

            <Button
                android:id="@+id/mes6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/mes6"
                android:backgroundTint="@color/naranjaOscuro"
                android:textColor="@color/blancoPrimario"
                android:textSize="13sp" />

            <Button
                android:id="@+id/anio"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/anio"
                android:backgroundTint="@color/naranjaOscuro"
                android:textColor="@color/blancoPrimario"
                android:textSize="13sp" />

        </GridLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>